--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/messaging.css">
+<!--    <link rel="stylesheet" href="css/messaging.css">-->
     <link rel="stylesheet" href="css/stylesheet.css">
+
 </head>
 <body>
 <div class="container-fluid">
@@ -17,5 +19,6 @@
     <script src="js/public_constants.js"></script>
     <script src="js/private_constants.js"></script>
     <script type="module" src="js/main.js"></script>
+
 </body>
 </html>
