--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/user.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
 <div class="container-fluid">
