added category image generator and random user image generator

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/user.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/blogCard.css">
+    <linl rel="stylesheet" href="css/nav.css">
 </head>
 <body>
 <div class="container-fluid">
